--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,8 @@ main: com.kzics.mplace.Main
 version: 1.0
 api-version: 1.20
 name: mPlace
+commands:
+  canvas:
+    description: Canvas command
+  pallet:
+    description: Pallet command
