- Added blockwhitelist command - Added Storage implementation

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,3 +7,5 @@ commands:
     description: Canvas command
   pallet:
     description: Pallet command
+  blockwhitelist:
+    description: Block whitelist command
